@@ -5,23 +5,23 @@
 
     <groupId>se.havochvatten.symphony</groupId>
     <artifactId>symphony-ws</artifactId>
-    <version>1.2.0</version>
+    <version>1.3.0</version>
     <packaging>war</packaging>
 
     <name>Symphony webservices</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>11</java.version>
+        <java.version>17</java.version>
         <version.jakartaee-api>8.0.0</version.jakartaee-api>
         <version.mockito>2.0.2-beta</version.mockito>
         <version.geotools>26.5</version.geotools>
-        <version.rest.assured>4.2.0</version.rest.assured>
+        <version.rest.assured>4.5.1</version.rest.assured>
         <version.swagger>1.5.13</version.swagger>
-        <version.postgresql-jdbc-driver>42.3.6</version.postgresql-jdbc-driver>
+        <version.postgresql-jdbc-driver>42.5.0</version.postgresql-jdbc-driver>
         <version.hibernate>4.3.1.Final</version.hibernate>
         <version.api.all>2.0.0.AM4</version.api.all>
-        <version.junit>4.12</version.junit>
+        <version.junit>4.13.2</version.junit>
         <version.javax.xml.bind>2.2.11</version.javax.xml.bind>
         <version.javax.activation>1.1.1</version.javax.activation>
         <version.jackson>2.12.6</version.jackson>
@@ -49,12 +49,6 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.hamcrest</groupId>
-            <artifactId>java-hamcrest</artifactId>
-            <version>${version.harmcrest}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${version.junit}</version>
@@ -73,7 +67,7 @@
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
+            <artifactId>mockito-core</artifactId>
             <version>${version.mockito}</version>
             <scope>test</scope>
             <exclusions>
@@ -84,6 +78,12 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest</artifactId>
+            <version>2.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>${version.postgresql-jdbc-driver}</version>
@@ -91,13 +91,13 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
-            <version>4.3.1.Final</version> <!--We'll probably get whatever Wildfly ships with anyway-->
+            <version>4.3.1.Final</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.vladmihalcea</groupId>
             <artifactId>hibernate-types-52</artifactId><!-- Wildfly 19 ships with Hibernate 5.3-->
-            <version>2.9.5</version>
+            <version>2.19.0</version>
         </dependency>
         <!--<dependency>
             <groupId>org.hibernate</groupId>
@@ -234,18 +234,13 @@
             <groupId>com.fasterxml.jackson.jaxrs</groupId>
             <artifactId>jackson-jaxrs-json-provider</artifactId>
             <version>${version.jackson}</version>
+            <scope>provided</scope>
         </dependency>
-
-        <!--Resteasy, used for testing API -->
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-jaxrs</artifactId>
             <version>${version.resteasy}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.resteasy</groupId>
-            <artifactId>resteasy-client</artifactId>
-            <version>${version.resteasy}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
@@ -261,7 +256,7 @@
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-jackson2-provider</artifactId>
             <version>${version.resteasy.jackson2.provider}</version>
-<!--            <scope>provided</scope>-->
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -273,7 +268,6 @@
             <artifactId>tomcat-catalina</artifactId>
             <version>${version.catalina.corsfilter}</version>
         </dependency>
-
         <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
@@ -368,7 +362,13 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
                 <configuration>
-                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                    <argLine>-Xmx2G
+                        --add-exports=java.base/sun.nio.ch=ALL-UNNAMED
+                        --add-opens=java.base/java.lang=ALL-UNNAMED
+                        --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+                        --add-opens=java.base/java.io=ALL-UNNAMED
+                        --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
+                    </argLine>
                     <!-- Run all tests by default -->
                 </configuration>
             </plugin>
@@ -377,8 +377,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -393,7 +393,6 @@
             </plugin>
         </plugins>
     </build>
-
     <repositories>
         <repository>
             <id>osgeo</id>
